Fix W3C errors & warnings; Remove useless comments in _fonts.scss; Remove contact page: add content in footer. Finish up the timeline content. Fix header quote width on mobile and display author after whole quote is written.

--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,8 +1,8 @@
 // Nunito Regular
 @font-face {
     font-family: "Nunito";
-    src: url("../fonts/nunito/Nunito-Regular.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/nunito/Nunito-Regular.woff2") format("woff2"); /* Modern Browsers */
+    src: url("../fonts/nunito/Nunito-Regular.woff") format("woff"),
+    url("../fonts/nunito/Nunito-Regular.woff2") format("woff2");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -11,8 +11,8 @@
 // Nunito Bold
 @font-face {
   font-family: "Nunito";
-  src: url("../fonts/nunito/Nunito-Regular.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/nunito/Nunito-Regular.woff2") format("woff2"); /* Modern Browsers */
+  src: url("../fonts/nunito/Nunito-Bold.woff") format("woff"),
+    url("../fonts/nunito/Nunito-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -21,8 +21,8 @@
 // Courier Prime Regular
 @font-face {
   font-family: "Courier Prime";
-  src: url("../fonts/courier/CourierPrime-Regular.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/courier/CourierPrime-Regular.woff2") format("woff2"); /* Modern Browsers */
+  src: url("../fonts/courier/CourierPrime-Regular.woff") format("woff"),
+    url("../fonts/courier/CourierPrime-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -31,8 +31,8 @@
 // Courier Prime Bold
 @font-face {
   font-family: "Courier Prime";
-  src: url("../fonts/courier/CourierPrime-Bold.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/courier/CourierPrime-Bold.woff2") format("woff2"); /* Modern Browsers */
+  src: url("../fonts/courier/CourierPrime-Bold.woff") format("woff"),
+    url("../fonts/courier/CourierPrime-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
