--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,6 +52,16 @@ $notification-padding: 1.25rem;
     }
 }
 
+// ----- HELPERS -----
+.has-no-opacity {
+    opacity: 0;
+}
+
+.is-opaque {
+    opacity: 1;
+    transition: .5s;
+}
+
 // ----- IMPORT BULMA -----
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
@@ -64,6 +74,7 @@ $notification-padding: 1.25rem;
 @import "../node_modules/bulma/sass/elements/notification.sass";
 @import "../node_modules/bulma/sass/elements/tag.sass";
 @import "../node_modules/bulma/sass/elements/title.sass";
+@import "../node_modules/bulma/sass/elements/other.sass";
 
 @import "../node_modules/bulma/sass/components/navbar.sass";
 @import "../node_modules/bulma/sass/components/message.sass";
